# data-generator

./: README.md  pyproject.toml
data_generator/: n_body.py
data_generator/tests/: test_n_body.py
notebooks/: generate-data.ipynb  nbody_for_training.csv  ndbody_for_inference.csv
